# python-ansible-wormhole

./: .gitignore  .hadolint.yaml  .zuul.yaml  README.md  dev.yml  docker-compose.yml  requirements.txt  setup.cfg
.github/: renovate.json
.github/workflows/: build-wormhole-client.yml  build-wormhole.yml  publish.yml
client/: .gitignore  Dockerfile  README.md  main.py  mirror.yml.example  requirements.txt
compose/: Dockerfile.app  Dockerfile.nginx  nginx.conf
scripts/: build.sh
wormhole/: main.py  settings.py
wormhole/routers/: collections.py  mirror.py  roles.py
