[metadata]
name = ansible-wormhole
version = 0.0.1
summary = Offline mirror for Ansible Galaxy
description_file =
    README.md
long_description = file: README.md
long_description_content_type = text/markdown
author = OSISM GmbH
author_email = info@osism.tech
home_page = https://github.com/osism/python-ansible-wormhole
python_requires = >=3.10
keywords =
    ansible
    galaxy
    wormhole
classifier =
   Development Status :: 3 - Alpha
   Environment :: Console
   Framework :: FastAPI
   Intended Audience :: Developers
   Intended Audience :: Information Technology
   License :: OSI Approved :: Apache Software License
   Operating System :: OS Independent
   Programming Language :: Python
   Programming Language :: Python :: 3 :: Only
   Programming Language :: Python :: 3
   Programming Language :: Python :: 3.8
   Programming Language :: Python :: 3.9
   Programming Language :: Python :: 3.10

[options]
include_package_data = False
install_requires = file: requirements.txt
packages =
    wormhole

[options.entry_points]
console_scripts =
    wormhole = wormhole.main:main
